# alexandria

./: README.md  example.env  pyproject.toml  requirements.txt
src/alexandria/: __main__.py
src/alexandria/dbutil/: createdbcommand.py  createtablecommand.py  dbcommand.py  dbconnector.py  insertrecordcommand.py
