
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobscraperv2"
version = "1.0.0"
description = "Scrape job websites to various observers."
readme = "README.md"
authors = [{ name = "Olin Gallet", email = "olindgallet@olingallet.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["scraper", "airtable", "automation"]
dependencies = [
    "backports.zoneinfo==0.2.1"
    "pkg_resources==0.0.0"
    "plumbum==1.8.1"
    "psycopg==3.1.8"
    "psycopg-binary==3.1.8"
    "typing_extensions==4.4.0"
]

[project.scripts]
alexandria = "alexandria.__main__:execute"
