
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alexandria"
version = "1.0.0"
description = "Alexandria media library"
readme = "README.md"
authors = [{ name = "Olin Gallet", email = "olindgallet@olingallet.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "flask",
    "waitress"
]

[project.scripts]
alexandria = "alexandria.__main__:execute"
